# 81.XOLCT

./: .gitignore  package-lock.json  package.json
.github/workflows/: release.yml
.tauri/: signing-key.pub
scripts/: copy-release.js
src/: dashboard.css  dashboard.html  dashboard.js  import.css  import.html  import.js  index.html  main.js  settings.css  settings.html  settings.js  styles.css  tokens.css  translations.js  welcome.css  welcome.html  welcome.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  welcome.json
src-tauri/src/: lib.rs  main.rs
